Added lock,localstorage,Dynamic UI

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Palette</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Muli:400,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+
     <div class="colors">
       <div class="color">
         <h2>Hex</h2>
@@ -235,7 +233,7 @@
     </div>
     <div class="save-container">
       <div class="save-popup">
-        <button class="close-save">X</button>
+        <button class="close-save"> X</button>
         <h4>Give a name to your pallete</h4>
         <input type="text" max-length="35" class="save-name" />
         <button type="submit" class="submit-save">Save</button>
